# fdia-se-gtk

./: CMakeLists.txt  README.md  info.cpp  info.yaml  main.cmb  main.cpp  main.ui  nodes.cpp
